UI/css/styles.css
@media ( max-width :320px) {
    #footer {
        width:100%;
    }
}

@media ( min-width :321px) {
    #footer {
        width:100%;
    }
}

@media ( min-width :640px) {
    #footer {
        width:100%;
    }
}
@media ( min-width :1200px) {
    #footer {
        width:100%;
    }
}



/*
linear-gradient(
        rgba(125, 218, 111, 0.027),
        rgba(40, 180, 131, 0.582),
        ),
*/
/*HOME PAGE DTYLING*/

table {
    border-collapse: collapse;
    border-spacing: 0;
    width: 100%;
    border: 1px solid #ddd;
  }
  
  th, td {
    text-align: left;
    padding: 8px;
  }

/* styling dashboard main section and sidebar section */
  @media only screen and (max-width: 768px){
    .profile-container__main--section .main-panel { 
        width: 80%;
        overflow: auto;
        background: #130101;
     }
     .profile-container__main--section .create-party-form{
         width: 100%;
     }
    .profile-container__sidebar{
        overflow: auto;
    }

    .profile-container__main--section >input[type=text], input[type=password] {
    width: 100%; 
    padding: 12px 20px; 
    margin: 8px 0; 
    display: inline-block; 
    border: 1px solid #ccc; 
    box-sizing: border-box; 
}  
/* mobile */
    @media only screen and (max-width: 400px) {
        .profile-container__main--section .main-panel{
          
            width: 100%;
        }
        .profile-container__main--section >input[type=text], input[type=password] {
            width: 100%; 
            padding: 12px 20px; 
            margin: 8px 0; 
            display: inline-block; 
            border: 1px solid #ccc; 
            box-sizing: border-box; 
        }  
}

    @media only screen and (max-width: 640px) {
        .profile-container__main--section .main-panel{
            display: inline-block;
            width: 100%;
        }

        .profile-container__main--section >input[type=text], input[type=password] {
            width: 100%; 
            padding: 12px 20px; 
            margin: 8px 0; 
            display: inline-block; 
            border: 1px solid #ccc; 
            box-sizing: border-box; 
        }  
}
/* tablets */
      @media only screen and (min-width: 401px) and (max-width: 960px) {
        .profile-container__main--section .main-panel{
             
         display: inline-block;
          width: 100%;
          }
      }

      .profile-container__main--section >input[type=text], input[type=password] {
        width: 100%; 
        padding: 12px 20px; 
        margin: 8px 0; 
        display: inline-block; 
        border: 1px solid #ccc; 
        box-sizing: border-box; 
    }  
}

    @media (max-width: 800px) {
        .form input {
          margin: 10px 0;
        }
      
        .form {
          flex-direction: column;
          align-items: stretch;
        }
      }



@media only screen and (min-width: 961px) {
    .profile-container__main--section .main-panel{
         
        display: inline-block;
        width: 100%; 
      }
      .profile-container__main--section >input[type=text], input[type=password] {
        width: 100%; 
        padding: 12px 20px; 
        margin: 8px 0; 
        display: inline-block; 
        border: 1px solid #ccc; 
        box-sizing: border-box; 
    }  
  }



/* styling dashboard header-1*/
@media only screen and (max-width: 768px){
    .header-1  { 
        width: 80%;
        overflow: auto;
        background: #130101;
     }
     .header-1{
         width: 100%;
     }
    .header-1 {
        overflow: auto;
    }
/* mobile */
    @media only screen and (max-width: 400px) {
        .header-1 {
          
            width: 100%;
        }
      }

    @media only screen and (max-width: 640px) {
        .header-1 {
          
            width: 100%;
        }
      }
/* tablets */
      @media only screen and (min-width: 401px) and (max-width: 960px) {
        .header-1 {
             
         display: inline-block;
          width: 100%;
          }
      }
}



@media only screen and (min-width: 961px) {
    .profile-container__main--section{
         
        display: inline-block;
        width: 100%; 
      }
  }







/* end styling dashboard main section and sidebar section */
@media only screen and (max-width: 400px){
    .profile-container__main--section { width: 90%; }
}
@media only screen and (max-width: 400px){
    .profile-container__sidebar {
         width: 90%; 
         height: auto;
        }
    
}

/* Mobile Styles */
@media only screen and (max-width: 400px) {
    #primary-5{
      
        display: inline-block;
        width: 100%;
    }
  }
  
  /* Tablet Styles */
  @media only screen and (min-width: 401px) and (max-width: 960px) {
    #primary-5{
         
     display: inline-block;
      width: 100%;
      }
  }

  
  






  /* Desktop Styles */
  @media only screen and (min-width: 961px) {
    #primary-5{
         
        display: inline-block;
        /* width: 100%; */
      }
  }
  






@media only screen and (max-width: 600px) {
    #primary {
        width:100%;
        background-color: #F82525;
        height: 20vh;
       }
  }
@media screen and (max-width: 1060px) {
    #primary-1 { 
        width:100%;
     }
}


@media screen and (max-width: 768px) {
#card .cards{
	width:100%;
	font-size:18px;
}
}
/* Tabled Portrait */
@media screen and (max-width: 768px) {
    #primary-2 {
         width:100%; 
        }
}
/* media query navbar */
@media screen and (max-width: 768px) {
    #primary-2 {
         width:100%;
         background-color: #F82525;
         height: 25vh;
        }
    #primary-2 .nav-brand{
        font-size:10px;
    }
    #primary-1 h1{
        font-size: 2.5rem;
        color: red;
    }
    
}
/* media query banner section */
@media screen and (max-width: 768px) {
.header-1 {
    background-color: #F82525;
    height: 20vh;
}


}
/* @media (min-width: 640px) { body {font-size:1rem;} }  */
@media (min-width:960px) { body {font-size:1.2rem;} } 
/* ... */

